// Temporarily disable this module during workspace reconfiguration
// This will be re-enabled when we fix the workspace configuration

// These are just placeholder declarations to make the compiler happy
use std::sync::Arc;
use parking_lot::RwLock;
use tonic::{Request, Response, Status};
use uuid::Uuid;

use crate::core::memory::ramlake::RamLake;
use crate::mlx::models::MLXModelManager;

// Import our mocked proto types
use crate::proto::postdevai::*;
use crate::proto::{search_similar_response, get_related_response};

// Import mocked service definition
pub use crate::proto::DragonNodeService;

// Empty DragonNodeServiceImpl struct to make the compiler happy
pub struct DragonNodeServiceImpl {
    ram_lake: Arc<RwLock<RamLake>>,
    model_manager: Arc<RwLock<MLXModelManager>>,
}

impl DragonNodeServiceImpl {
    pub fn new(ram_lake: Arc<RwLock<RamLake>>, model_manager: Arc<RwLock<MLXModelManager>>) -> Self {
        Self {
            ram_lake,
            model_manager,
        }
    }
}

#[tonic::async_trait]
impl DragonNodeService for DragonNodeServiceImpl {
    // Implementation temporarily removed for individual branch build
}